// tbclient.CommonReq
syntax = "proto3";
option java_package = "tbclient";
message CommonReq {
  int32 _client_type = 1;
  string _client_version = 2;
  string BDUSS = 10;
}
